--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "DEPLOY_ENV=GH_PAGES nuxt generate",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
+    "dotenv": "^8.2.0",
     "nuxt": "^2.0.0",
     "vue-good-table": "^2.18.1"
   },
